pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/PFC_Task_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PFC Task Mapping</label>
    <pluralLabel>PFC Task Mappings</pluralLabel>
</CustomObject>