pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>REV-57: master on/off switch for this prefix mapping. The orchestrator ignores inactive rows, so a source can be disabled without editing the flow.</description>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>