pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Default_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Campaign_Name__c</fullName>
    <description>REV-57: exact Campaign.Name to stamp on the PFC (Campaign__c) and add the person to as a member (Newsfeed = "Lexology - Free Newsfeed Subscribers"). Resolved to a Campaign Id at runtime by name (no hardcoded Ids). Blank = no campaign.</description>
    <label>Default Campaign Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>