pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Form_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Form_Name_Suffix__c</fullName>
    <description>REV-57: optional suffix appended after the month/year on a Default_Form_Name__c (e.g. Newsfeed = "MQL" → "... - June 2026 - MQL"). Blank = no suffix. Only used when Parse_Form_Name_From_Subject__c is FALSE and Default_Form_Name__c is set.</description>
    <label>Form Name Suffix</label>
    <type>Text</type>
    <length>40</length>
</CustomField>