pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Match_Priority__c.field-meta.xml
<CustomField>
    <fullName>Match_Priority__c</fullName>
    <description>REV-57: order in which the orchestrator tests active prefixes (lowest first). Insurance against future prefix overlap; the current four prefixes do not overlap.</description>
    <label>Match Priority</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>