pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Parse_Form_Name_From_Subject__c.field-meta.xml
<CustomField>
    <fullName>Parse_Form_Name_From_Subject__c</fullName>
    <description>REV-57: when TRUE the orchestrator derives Form_Name__c from the Task Subject (stripping Form_Name_Prefix_To_Strip__c). MUST be FALSE for Newsfeed - identity is never parsed from the subject; person comes from Task WhoId.</description>
    <label>Parse Form Name From Subject</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>