pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Record_Type_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_DeveloperName__c</fullName>
    <description>REV-57: DeveloperName of the Pardot_Form_Completion__c record type to apply. Resolved to an Id at runtime via Get Records (no hardcoded record-type Ids).</description>
    <label>Record Type DeveloperName</label>
    <type>Text</type>
    <length>80</length>
</CustomField>