pfc-triage-cockpit/fulluat-stage/objects/PFC_Task_Mapping__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>REV-57: value stamped into PFC_Source__c (e.g. "Inbound Form", "Newsfeed", "Event").</description>
    <label>Source</label>
    <type>Text</type>
    <length>40</length>
</CustomField>